unpackaged/main/default/objects/Account/fields/Partner_2_Title__c.field-meta.xml
<CustomField>
    <fullName>Partner_2_Title__c</fullName>
    <label>Title(2)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>