unpackaged/main/default/objects/Account/fields/Percent_of_Ownership_1__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Ownership_1__c</fullName>
    <defaultValue>1</defaultValue>
    <label>% of Ownership(1)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>