unpackaged/main/default/objects/Account/fields/PINPAD_Infor__c.field-meta.xml
<CustomField>
    <fullName>PINPAD_Infor__c</fullName>
    <label>PINPAD Info</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchase New</fullName>
            </value>
            <value>
                <fullName>Swap Current</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>