unpackaged/main/default/objects/Account/fields/POS_Software_Type__c.field-meta.xml
<CustomField>
    <fullName>POS_Software_Type__c</fullName>
    <label>POS Software Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>