unpackaged/main/default/objects/Account/fields/Primary_SIC__c.field-meta.xml
<CustomField>
    <fullName>Primary_SIC__c</fullName>
    <label>Primary SIC</label>
    <length>6</length>
    <type>Text</type>
</CustomField>