unpackaged/main/default/objects/Account/fields/Prior_Cash_Advance_Company__c.field-meta.xml
<CustomField>
    <fullName>Prior_Cash_Advance_Company__c</fullName>
    <label>Prior Cash Advance Company</label>
    <length>30</length>
    <type>Text</type>
</CustomField>