unpackaged/main/default/objects/Account/fields/Processor_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Processor_Contact_Number__c</fullName>
    <description>Processor Contact Number</description>
    <label>Processor Contact Number</label>
    <type>Phone</type>
</CustomField>