unpackaged/main/default/objects/Account/fields/PSF_Amount__c.field-meta.xml
<CustomField>
    <fullName>PSF_Amount__c</fullName>
    <label>PSF Amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>