unpackaged/main/default/objects/Account/fields/Pull_Credit_Error__c.field-meta.xml
<CustomField>
    <fullName>Pull_Credit_Error__c</fullName>
    <label>Pull Credit Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>