unpackaged/main/default/objects/Account/fields/Pull_Credit_Report__c.field-meta.xml
<CustomField>
    <fullName>Pull_Credit_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pull Credit Report</description>
    <label>Pull Credit Report</label>
    <type>Checkbox</type>
</CustomField>