unpackaged/main/default/objects/Account/fields/Referred_By_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will contain the Contact who referred the Account.</description>
    <inlineHelpText>This field will contain the Contact who referred the Account.</inlineHelpText>
    <label>Referred By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts(Referred By)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>