unpackaged/main/default/objects/Account/fields/Renewal_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Eligible__c</fullName>
    <label>Renewal Eligible</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Renewal Eligible</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>