unpackaged/main/default/objects/Account/fields/Rep__c.field-meta.xml
<CustomField>
    <fullName>Rep__c</fullName>
    <label>Rep</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Joe</fullName>
            </value>
            <value>
                <fullName>Ben</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Eli</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>