unpackaged/main/default/objects/Account/fields/Requested_Amount_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Requested_Amount_of_Funds__c</fullName>
    <label>Requested Amount of Funds</label>
    <length>30</length>
    <type>Text</type>
</CustomField>