unpackaged/main/default/objects/Account/fields/Reseller_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Contact_Name__c</fullName>
    <label>Reseller Contact Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>