unpackaged/main/default/objects/Account/fields/Reseller_Ph_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Ph_Contact__c</fullName>
    <label>Reseller Ph# / Contact:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>