unpackaged/main/default/objects/Account/fields/Residence_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Residence_Address_1__c</fullName>
    <label>Residence Address(1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>