unpackaged/main/default/objects/Account/fields/Retail_Discount_Rate_MasterCard__c.field-meta.xml
<CustomField>
    <fullName>Retail_Discount_Rate_MasterCard__c</fullName>
    <label>Retail Discount Rate MasterCard</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>