unpackaged/main/default/objects/Account/fields/Retail_Discount_Rate_Visa_MC_Discover__c.field-meta.xml
<CustomField>
    <fullName>Retail_Discount_Rate_Visa_MC_Discover__c</fullName>
    <label>Retail Discount Rate Visa/MC/Discover</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>