unpackaged/main/default/objects/Account/fields/Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Routing_Number__c</fullName>
    <description>Routing Number</description>
    <label>Routing Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>