unpackaged/main/default/objects/Account/fields/S_Corp__c.field-meta.xml
<CustomField>
    <fullName>S_Corp__c</fullName>
    <description>Used for Conga Merge to display S-Corp on contracts that have no checkbox for S-Corp, rather a box for 'Other'.</description>
    <formula>IF(ISPICKVAL( Entity_Type__c, "S-Corp"), "S-Corp", "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S-Corp</label>
    <type>Text</type>
</CustomField>