unpackaged/main/default/objects/Account/fields/Second_QTY_of_Terminals__c.field-meta.xml
<CustomField>
    <fullName>Second_QTY_of_Terminals__c</fullName>
    <label>Second QTY of Terminals</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>