unpackaged/main/default/objects/Account/fields/Second_Terminal_Type__c.field-meta.xml
<CustomField>
    <fullName>Second_Terminal_Type__c</fullName>
    <label>Second Terminal Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>