unpackaged/main/default/objects/Account/fields/Secondary_SIC_Description__c.field-meta.xml
<CustomField>
    <fullName>Secondary_SIC_Description__c</fullName>
    <label>Secondary SIC Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>