unpackaged/main/default/objects/Account/fields/Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee__c</fullName>
    <label>Setup Fee</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>