unpackaged/main/default/objects/Account/fields/Ship_Equipment_to__c.field-meta.xml
<CustomField>
    <fullName>Ship_Equipment_to__c</fullName>
    <label>Ship Equipment To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Merchant</fullName>
            </value>
            <value>
                <fullName>ISO</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>