unpackaged/main/default/objects/Account/fields/Shipping_Address_if_Different__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_if_Different__c</fullName>
    <label>Shipping Address if Different</label>
    <type>TextArea</type>
</CustomField>