unpackaged/main/default/objects/Account/fields/Small_Notes_to_CC_Processor__c.field-meta.xml
<CustomField>
    <fullName>Small_Notes_to_CC_Processor__c</fullName>
    <label>Small Notes to CC Processor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>