unpackaged/main/default/objects/Account/fields/Software_Connection_Speed__c.field-meta.xml
<CustomField>
    <fullName>Software_Connection_Speed__c</fullName>
    <label>Software Connection Speed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dial Up</fullName>
            </value>
            <value>
                <fullName>High Speed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>