unpackaged/main/default/objects/Account/fields/Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Square_Footage__c</fullName>
    <label>Square Footage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>