unpackaged/main/default/objects/Account/fields/SSN_1__c.field-meta.xml
<CustomField>
    <fullName>SSN_1__c</fullName>
    <label>SSN #(1)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>