unpackaged/main/default/objects/Account/fields/SSN_2__c.field-meta.xml
<CustomField>
    <fullName>SSN_2__c</fullName>
    <label>SSN #(2)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>