unpackaged/main/default/objects/Account/fields/State_1__c.field-meta.xml
<CustomField>
    <fullName>State_1__c</fullName>
    <label>State(1)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>