unpackaged/main/default/objects/Account/fields/State_2__c.field-meta.xml
<CustomField>
    <fullName>State_2__c</fullName>
    <label>State(2)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>