unpackaged/main/default/objects/Account/fields/State_Cashio__c.field-meta.xml
<CustomField>
    <fullName>State_Cashio__c</fullName>
    <label>State (Cashio)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>