unpackaged/main/default/objects/Account/fields/State_of_Incorporation_or_Orgenization__c.field-meta.xml
<CustomField>
    <fullName>State_of_Incorporation_or_Orgenization__c</fullName>
    <label>State of Incorporation or Orgenization</label>
    <length>40</length>
    <type>Text</type>
</CustomField>