unpackaged/main/default/objects/Account/fields/Stated_Gross_Sales__c.field-meta.xml
<CustomField>
    <fullName>Stated_Gross_Sales__c</fullName>
    <label>Gross Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>