unpackaged/main/default/objects/Account/fields/Stated_Monthly_CC_Sales__c.field-meta.xml
<CustomField>
    <fullName>Stated_Monthly_CC_Sales__c</fullName>
    <label>Stated Monthly CC Sales</label>
    <length>30</length>
    <type>Text</type>
</CustomField>