unpackaged/main/default/objects/Account/fields/Statement_Fee__c.field-meta.xml
<CustomField>
    <fullName>Statement_Fee__c</fullName>
    <label>Statement Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>