unpackaged/main/default/objects/Account/fields/Terminal_Application__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Application__c</fullName>
    <label>Terminal Application</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Retail w/ Tips</fullName>
            </value>
            <value>
                <fullName>Lodging</fullName>
            </value>
            <value>
                <fullName>Quick Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>