unpackaged/main/default/objects/Account/fields/Terminal_Connection_Type__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Connection_Type__c</fullName>
    <label>Terminal Connection Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dial Up</fullName>
            </value>
            <value>
                <fullName>High Speed/DSL</fullName>
            </value>
            <value>
                <fullName>Wireless</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>