unpackaged/main/default/objects/Account/fields/Three_Month_Bank_1__c.field-meta.xml
<CustomField>
    <fullName>Three_Month_Bank_1__c</fullName>
    <label>Three Month Bank 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>