unpackaged/main/default/objects/Account/fields/Three_Month_MS__c.field-meta.xml
<CustomField>
    <fullName>Three_Month_MS__c</fullName>
    <label>Three Month MS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>