unpackaged/main/default/objects/Account/fields/Three_Month_MS_formula__c.field-meta.xml
<CustomField>
    <fullName>Three_Month_MS_formula__c</fullName>
    <formula>( Three_Month_MS_2__c +Three_Month_MS_3__c+ Three_Month_MS__c )/

Max(1,if ( Three_Month_MS_2__c =0,0,1)+if (Three_Month_MS_3__c =0,0,1)+ if(Three_Month_MS__c =0,0,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Three Month MS formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>