unpackaged/main/default/objects/Account/fields/Time_in_Business_Years__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Business_Years__c</fullName>
    <formula>(TODAY()- Date_Business_Established__c )/365.24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time in Business (Years)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>