unpackaged/main/default/objects/Account/fields/Time_Remaining_Lease_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Time_Remaining_Lease_Mortgage__c</fullName>
    <label>Time Remaining Lease/Mortgage</label>
    <length>10</length>
    <type>Text</type>
</CustomField>