unpackaged/main/default/objects/Account/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description>Time zone of the merchant which will help with the preferred leads to contact at any given time.</description>
    <inlineHelpText>Time zone of the merchant.</inlineHelpText>
    <label>Time Zone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>