unpackaged/main/default/objects/Account/fields/Total_Batches__c.field-meta.xml
<CustomField>
    <fullName>Total_Batches__c</fullName>
    <description>Total Batches</description>
    <label>Total Batches</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>