unpackaged/main/default/objects/Account/fields/Total_Charged_for_that_month__c.field-meta.xml
<CustomField>
    <fullName>Total_Charged_for_that_month__c</fullName>
    <description>Total Charged for that month</description>
    <label>Total Charged for that month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>