unpackaged/main/default/objects/Account/fields/Total_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposit_Amount__c</fullName>
    <description>Total Deposit Amount</description>
    <label>Total Deposit Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>