unpackaged/main/default/objects/Account/fields/Total_Deposit_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposit_Count__c</fullName>
    <description>Total Deposit Count</description>
    <label>Total Deposit Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>