unpackaged/main/default/objects/Account/fields/Total_Deposits_10__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposits_10__c</fullName>
    <label>Total Deposits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>