unpackaged/main/default/objects/Account/fields/Total_Percent_of_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Total_Percent_of_Ownership__c</fullName>
    <formula>Percent_of_Ownership_1__c  +  of_Ownership_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total % of Ownership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>