unpackaged/main/default/objects/Account/fields/Total_Transaction_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Transaction_Count__c</fullName>
    <label>Total Transaction Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>