unpackaged/main/default/objects/Account/fields/Total_Withdrawal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Withdrawal_Amount__c</fullName>
    <description>Total Withdrawal Amount</description>
    <label>Total Withdrawal Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>