unpackaged/main/default/objects/Account/fields/Total_Withdrawal_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Withdrawal_Count__c</fullName>
    <description>Total Withdrawal Count</description>
    <label>Total Withdrawal Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>