unpackaged/main/default/objects/Account/fields/Trade_Ref_1_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Trade_Ref_1_Account_Number__c</fullName>
    <label>Trade Ref #1 Account Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>