unpackaged/main/default/objects/Account/fields/Trade_Ref_1_Phone__c.field-meta.xml
<CustomField>
    <fullName>Trade_Ref_1_Phone__c</fullName>
    <label>Trade Ref #1 Phone</label>
    <type>Phone</type>
</CustomField>