unpackaged/main/default/objects/Account/fields/Trade_Ref_2_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Trade_Ref_2_Account_Number__c</fullName>
    <label>Trade Ref #2 Account Number</label>
    <type>TextArea</type>
</CustomField>