unpackaged/main/default/objects/Account/fields/Trade_Ref_2_Contact__c.field-meta.xml
<CustomField>
    <fullName>Trade_Ref_2_Contact__c</fullName>
    <label>Trade Ref #2 Contact</label>
    <length>30</length>
    <type>Text</type>
</CustomField>