unpackaged/main/default/objects/Account/fields/Trade_Ref_Business_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Trade_Ref_Business_Name_2__c</fullName>
    <label>Trade Ref Business Name #2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>