unpackaged/main/default/objects/Account/fields/Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Fee__c</fullName>
    <label>Transaction Fee</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>