unpackaged/main/default/objects/Account/fields/Transit_ABA_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Transit_ABA_Routing_Number__c</fullName>
    <label>Transit (ABA Routing) Number:</label>
    <length>30</length>
    <type>Text</type>
</CustomField>