unpackaged/main/default/objects/Account/fields/Type_of_Phone_Lines__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Phone_Lines__c</fullName>
    <label>Type of Phone Lines</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analog</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>