unpackaged/main/default/objects/Account/fields/Type_of_Products_Services_Sold__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Products_Services_Sold__c</fullName>
    <label>Type of Products/Services Sold</label>
    <length>30</length>
    <type>Text</type>
</CustomField>