unpackaged/main/default/objects/Account/fields/Use_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Use_of_Funds__c</fullName>
    <label>Use of Funds</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equipment</fullName>
                <label>EQUIPMENT</label>
            </value>
            <value>
                <fullName>Inventory</fullName>
                <label>INVENTORY</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pay Bills</fullName>
            </value>
            <value>
                <fullName>Refinance / Consolidation</fullName>
            </value>
            <value>
                <fullName>Working Capital</fullName>
                <label>WORKING CAPITAL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>