unpackaged/main/default/objects/Account/fields/Use_of_Proceeds__c.field-meta.xml
<CustomField>
    <fullName>Use_of_Proceeds__c</fullName>
    <label>Use of Proceeds</label>
    <length>30</length>
    <type>Text</type>
</CustomField>