unpackaged/main/default/objects/Account/fields/Visa_MC_Volume_10__c.field-meta.xml
<CustomField>
    <fullName>Visa_MC_Volume_10__c</fullName>
    <label>Visa/MC Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>