unpackaged/main/default/objects/Account/fields/WEX_Wright_Express_7_Standard_Transacti__c.field-meta.xml
<CustomField>
    <fullName>WEX_Wright_Express_7_Standard_Transacti__c</fullName>
    <label>WEX (Wright Express)7 Standard Transacti</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>