unpackaged/main/default/objects/Account/fields/When_Like_Funding__c.field-meta.xml
<CustomField>
    <fullName>When_Like_Funding__c</fullName>
    <label>When Like Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Right away</fullName>
            </value>
            <value>
                <fullName>1-2 weeks</fullName>
            </value>
            <value>
                <fullName>2-4 weeks</fullName>
            </value>
            <value>
                <fullName>Not sure yet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>