unpackaged/main/default/objects/Account/fields/Wireless_Network_Monthly_Access__c.field-meta.xml
<CustomField>
    <fullName>Wireless_Network_Monthly_Access__c</fullName>
    <label>Wireless Network Monthly Access</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>