unpackaged/main/default/objects/Account/fields/Wireless_Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Wireless_Transaction_Fee__c</fullName>
    <label>Wireless Transaction Fee</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>