unpackaged/main/default/objects/Account/fields/Years_in_Business_2__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Business_2__c</fullName>
    <formula>(TODAY()- Date_Business_Established__c )/29.6041667</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time in Business (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>