unpackaged/main/default/objects/Account/fields/Years_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Business__c</fullName>
    <inlineHelpText>Years completed in the Business.</inlineHelpText>
    <label>Years in Business</label>
    <length>40</length>
    <type>Text</type>
</CustomField>