unpackaged/main/default/objects/Account/fields/Zip_2__c.field-meta.xml
<CustomField>
    <fullName>Zip_2__c</fullName>
    <label>Zip(2)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>