unpackaged/main/default/objects/Account/validationRules/Owner_1_SSN.validationRule-meta.xml
<ValidationRule>
    <fullName>Owner_1_SSN</fullName>
    <active>true</active>
    <description>Owner 1 SSN is valid.</description>
    <errorConditionFormula>NOT(
OR(
ISBLANK( SSN_1__c ),
REGEX( SSN_1__c , "[0-9]{3}-?[0-9]{2}-?[0-9]{4}")
)
)</errorConditionFormula>
    <errorDisplayField>SSN_1__c</errorDisplayField>
    <errorMessage>Please enter SSN in 999-99-9999 format.</errorMessage>
</ValidationRule>