unpackaged/main/default/objects/Account/validationRules/US_Zip_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>US_Zip_Code</fullName>
    <active>true</active>
    <description>Zip field is valid.</description>
    <errorConditionFormula>AND (
  NOT(REGEX( Legal_Zip__c , "\\d{5}(-\\d{4})?")),
  NOT(REGEX( Legal_Zip__c , "((?i)[ABCEGHJKLMNPRSTVXY]\\d[A-Z]?\\s?\\d[A-Z]\\d)?"))
)</errorConditionFormula>
    <errorMessage>The data in the Zip Field is Invalid.
USA Zip code must be in 99999 or 99999-9999 format.
Canadian Zip code must be in A9A 9A9 format.</errorMessage>
</ValidationRule>