unpackaged/main/default/objects/Account/validationRules/Zip_1_Is_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Zip_1_Is_Valid</fullName>
    <active>true</active>
    <description>Zip(1) field is valid.</description>
    <errorConditionFormula>AND (
NOT(REGEX(  Zip_1__c , "\\d{5}(-\\d{4})?")),
NOT(REGEX( Zip_1__c , "((?i)[ABCEGHJKLMNPRSTVXY]\\d[A-Z]?\\s?\\d[A-Z]\\d)?"))
)</errorConditionFormula>
    <errorMessage>The data in the Zip(1) Field is Invalid.
USA Zip code must be in 99999 or 99999-9999 format.
Canadian Zip code must be in A9A 9A9 format.</errorMessage>
</ValidationRule>