unpackaged/main/default/objects/Account/listViews/AllAccounts_AIS.listView-meta.xml
<ListView>
    <fullName>AllAccounts_AIS</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Kim Walters</value>
    </filters>
    <label>AllAccounts_AIS_KimWalters</label>
</ListView>