unpackaged/main/default/objects/Account/listViews/Last_30_days.listView-meta.xml
<ListView>
    <fullName>Last_30_days</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Last 30 days</label>
</ListView>